{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 91,
  "lineage": "f3e5aaf8-4328-2db3-14cf-d0c8753280e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f667d7c6bc4f254b",
            "association_id": "eipassoc-095f705c2e0907ca5",
            "domain": "vpc",
            "id": "eipalloc-0f667d7c6bc4f254b",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0364fb10be5c55784",
            "private_dns": "ip-172-16-1-68.ap-south-1.compute.internal",
            "private_ip": "172.16.1.68",
            "public_dns": "ec2-43-204-182-91.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.182.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a9cacd78d62ef5a",
            "association_id": "eipassoc-0b6914f56dff3e51f",
            "domain": "vpc",
            "id": "eipalloc-06a9cacd78d62ef5a",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0b62bc223ad3cf9dd",
            "private_dns": "ip-172-16-2-141.ap-south-1.compute.internal",
            "private_ip": "172.16.2.141",
            "public_dns": "ec2-13-233-185-141.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.185.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:internet-gateway/igw-0c9ea37abfd5fea4f",
            "id": "igw-0c9ea37abfd5fea4f",
            "owner_id": "970992042112",
            "tags": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "internet gateway",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:loadbalancer/app/Demo-ALG-tf/23452ed08c86811a",
            "arn_suffix": "app/Demo-ALG-tf/23452ed08c86811a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Demo-ALG-tf-133489589.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:loadbalancer/app/Demo-ALG-tf/23452ed08c86811a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Demo-ALG-tf",
            "security_groups": [
              "sg-06c2298b03a03ab32"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055fb787d5b25ec25"
              },
              {
                "subnet_id": "subnet-0e51c3bfb0ff2ba60"
              }
            ],
            "subnets": [
              "subnet-055fb787d5b25ec25",
              "subnet-0e51c3bfb0ff2ba60"
            ],
            "tags": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "demo-assignment",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-0fdf3c4e99c68938f",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:listener/app/Demo-ALG-tf/23452ed08c86811a/a4b9050617607ecd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:targetgroup/Demo-TargetGroup-tf/eb287c977f89581d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:listener/app/Demo-ALG-tf/23452ed08c86811a/a4b9050617607ecd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:loadbalancer/app/Demo-ALG-tf/23452ed08c86811a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub1",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:targetgroup/Demo-TargetGroup-tf/eb287c977f89581d",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/eb287c977f89581d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:970992042112:targetgroup/Demo-TargetGroup-tf/eb287c977f89581d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f667d7c6bc4f254b",
            "connectivity_type": "public",
            "id": "nat-039e3a32a291af7da",
            "network_interface_id": "eni-0364fb10be5c55784",
            "private_ip": "172.16.1.68",
            "public_ip": "43.204.182.91",
            "subnet_id": "subnet-055fb787d5b25ec25"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a9cacd78d62ef5a",
            "connectivity_type": "public",
            "id": "nat-046408e202b751353",
            "network_interface_id": "eni-0b62bc223ad3cf9dd",
            "private_ip": "172.16.2.141",
            "public_ip": "13.233.185.141",
            "subnet_id": "subnet-0e51c3bfb0ff2ba60"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:route-table/rtb-008f4f260c9d75f6c",
            "id": "rtb-008f4f260c9d75f6c",
            "owner_id": "970992042112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039e3a32a291af7da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:route-table/rtb-027ee737a5f5b97ea",
            "id": "rtb-027ee737a5f5b97ea",
            "owner_id": "970992042112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046408e202b751353",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:route-table/rtb-0f4e60998a5e9c94a",
            "id": "rtb-0f4e60998a5e9c94a",
            "owner_id": "970992042112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c9ea37abfd5fea4f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public subnet route table",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020f40c400d5f8135",
            "route_table_id": "rtb-0f4e60998a5e9c94a",
            "subnet_id": "subnet-055fb787d5b25ec25"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a74b6d980fcbb776",
            "route_table_id": "rtb-0f4e60998a5e9c94a",
            "subnet_id": "subnet-0e51c3bfb0ff2ba60"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0873ea1d2bce99a80",
            "route_table_id": "rtb-008f4f260c9d75f6c",
            "subnet_id": "subnet-0f9a32d92c3380fab"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.prv_sub1",
            "aws_subnet.pub_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2414ce9b6a5acee",
            "route_table_id": "rtb-027ee737a5f5b97ea",
            "subnet_id": "subnet-0994dc58a8333a3ff"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.prv_sub2",
            "aws_subnet.pub_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:security-group/sg-06c2298b03a03ab32",
            "description": "SG for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c2298b03a03ab32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "970992042112",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for ALB",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:security-group/sg-0a32105cb8cf81644",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a32105cb8cf81644",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "970992042112",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "SG for web",
              "Project": "demo-assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:subnet/subnet-0f9a32d92c3380fab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9a32d92c3380fab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970992042112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:subnet/subnet-0994dc58a8333a3ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994dc58a8333a3ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "970992042112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "private_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:subnet/subnet-055fb787d5b25ec25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055fb787d5b25ec25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970992042112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet1",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:subnet/subnet-0e51c3bfb0ff2ba60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e51c3bfb0ff2ba60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970992042112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "public_subnet2",
              "Project": "demo-assignment"
            },
            "vpc_id": "vpc-0fdf3c4e99c68938f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:970992042112:vpc/vpc-0fdf3c4e99c68938f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05ebed25c21680786",
            "default_route_table_id": "rtb-007dc6153a5b1fda0",
            "default_security_group_id": "sg-0ced170f0a42837cd",
            "dhcp_options_id": "dopt-a9734dc1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fdf3c4e99c68938f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007dc6153a5b1fda0",
            "owner_id": "970992042112",
            "tags": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            },
            "tags_all": {
              "Name": "My Demo VPC",
              "Project": "demo-assignment"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}